--- a/h1.html
+++ b/h1.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <center>
-       <h1>HI there i am Chethan here</h1>
+       <h1>HI there i am MR.Chethan here</h1>
        <hr>
     </center>
   </body>
